<resources>
    <string name="app_label">Nesoid</string>
    <string name="emulator_service_running">Nesoid is running.</string>
    <string name="launcher_shortcut_name">NES game</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="title_select_rom">Select ROM</string>
    <string name="no_files_in_folder">No appropriate files in this folder.</string>
    <string name="invalid_dir">Invalid directory</string>
    <string name="delete_rom">Delete ROM</string>
    <string name="clear_saves">Clear in-game saves</string>
    <string name="clear_cheats">Clear cheats</string>
    <string name="refresh">Refresh</string>
    <string name="shortcut_name">Shortcut Name</string>
    <string name="github">Github</string>
    <string name="help">Help</string>
    <string name="load_rom_failed">Load ROM failed. Please try another file.</string>
    <string name="rom_not_supported">ROM file type is not supported.</string>
    <string name="replace_game_title">Replace Game</string>
    <string name="replace_game_message">Start playing the new game? The current game <b>WILL NOT</b> be saved.</string>
    <string name="quit_game_title">Close game</string>
    <string name="load_state_title">Load state</string>
    <string name="save_state_title">Save state</string>
    <string name="slot_quick">Quick</string>
    <string name="slot_nth">Slot %1$d</string>
    <string name="slot_empty">&lt;empty></string>
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="power">Power</string>
    <string name="change_disk">Change disk</string>
    <string name="change_disk_warning">This ROM does not support switching disk.</string>
    <string name="disk_side">Disk %1$d Side %2$c</string>
    <string name="netplay_connect">Net-play</string>
    <string name="netplay_disconnect">Disconnect</string>
    <string name="wifi_server">Wi-Fi (Server)</string>
    <string name="wifi_client">Wi-Fi (Client)</string>
    <string name="bluetooth_server">Bluetooth (Server)</string>
    <string name="bluetooth_client">Bluetooth (Client)</string>
    <string name="netplay_sync">Sync</string>
    <string name="fast_forward">Fast forward</string>
    <string name="no_fast_forward">Regular</string>
    <string name="fast_forward_toggle">Toggle fast forward</string>
    <string name="screenshot">Screenshot</string>
    <string name="screenshot_saved">Screenshot saved to Gallery.</string>
    <string name="save_state">Save</string>
    <string name="load_state">Load</string>
    <string name="cheats">Cheats</string>
    <string name="close">Close</string>
    <string name="connection_closed">Remote disconnected.</string>
    <string name="connect_failed">Connecting to remote failed.</string>
    <string name="protocol_incompatible">Protocol incompatible. Please update both ends to the latest version!</string>
    <string name="wifi_not_available">Wi-Fi network is not available!</string>
    <string name="wifi_server_listening">"Waiting for connection on:

IP: %1$s
Port: %2$d"</string>
    <string name="client_connecting">Connecting to device...</string>
    <string name="bluetooth_server_listening">"Waiting for connection...

Click here to make this device discoverable."</string>
    <string name="ip_address">IP:</string>
    <string name="port">Port:</string>
    <string name="invalid_ip_address">Invalid IP address.</string>
    <string name="invalid_port">Invalid port.</string>
    <string name="key_profiles">Key profiles</string>
    <string name="new_profile">New profile</string>
    <string name="new_profile_title">Profile name</string>
    <string name="new_profile_error">Error creating the new profile.</string>
    <string name="load_profile">Load profile</string>
    <string name="save_profile">Save profile</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="no_cheats_help">"You haven't entered any cheats yet.

To add cheats, press "<b><font fgcolor="#ffffffff">Menu</font></b> and then <b><font fgcolor="#ffffffff">New cheat</font></b>". Cheat codes can be:
 
"<li><b><font fgcolor="#ffffffff">Game Genie</font></b> (eg. SLAIUZ)</li>"
"</string>
    <string name="new_cheat">New cheat</string>
    <string name="cheat_code">Code:</string>
    <string name="cheat_name">Name (Optional):</string>
    <string name="invalid_cheat_code">Cheat code is invalid!</string>
    <string name="audio_video_settings">Audio &amp; video settings</string>
    <string name="audio_settings">Audio settings</string>
    <string name="enable_sound">Enable sound</string>
    <string name="sound_volume">Sound volume</string>
    <string name="video_settings">Video settings</string>
    <string name="scaling_mode">Scaling mode</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="fast_forward_speed">Fast forward speed</string>
    <string name="frame_skip_settings">Frame skip settings</string>
    <string name="frame_skip_mode">Frame skip mode</string>
    <string name="max_frame_skips">Max frame skips</string>
    <string name="max_frame_skips_summary">Maximum number of consecutive frame skips</string>
    <string name="refresh_rate">Screen refresh rate</string>
    <string name="refresh_rate_summary">MOTO Droid 2.1 users should set this to 30!</string>
    <string name="accurate_rendering">Accurate rendering</string>
    <string name="accurate_rendering_summary">Some games needs this (eg. Punch-Out)</string>
    <string name="accurate_rendering_prompt">Will not take effect until game is reloaded</string>
    <string name="input_settings">Input settings</string>
    <string name="second_controller">2nd input device</string>
    <string name="second_controller_summary">To use Zapper, you also need to turn off the virtual keypad!</string>
    <string name="key_mappings">Key mappings</string>
    <string name="key_mappings_summary">Map game keys to phone hardware buttons</string>
    <string name="gamepad_1">Pad 1</string>
    <string name="gamepad_2">Pad 2</string>
    <string name="shortcut_keys">Shortcut keys</string>
    <string name="quick_load">Quick load</string>
    <string name="quick_save">Quick save</string>
    <string name="vkeypad_settings">Virtual keypad settings</string>
    <string name="vkeypad_settings_summary">Setup the touchable on-screen keypad</string>
    <string name="enable_vibrator">Vibrate on keypress</string>
    <string name="enable_vkeypad">Virtual keypad</string>
    <string name="multitouch_unsupported">This phone does not support multi-touch!</string>
    <string name="dpad_4way">Disable D-pad diagonals</string>
    <string name="dpad_deadzone">D-pad dead zone</string>
    <string name="two_buttons_press">Two-buttons press</string>
    <string name="in_between_press">In-between press</string>
    <string name="in_between_press_summary">Press in-between two buttons to simulate simultaneous press</string>
    <string name="point_size_press">By point size</string>
    <string name="point_size_press_summary">Determine by touch point size (does not work on all devices)</string>
    <string name="point_size_press_threshold">Point size threshold</string>
    <string name="appearance">Appearance</string>
    <string name="vkeypad_size">Controls size</string>
    <string name="vkeypad_transparency">Controls transparency</string>
    <string name="hide_controls">Hide controls</string>
    <string name="hide_dpad">Hide D-pad</string>
    <string name="hide_buttons">Hide A/B</string>
    <string name="hide_extra_buttons">Hide A/B turbo</string>
    <string name="disable_extra_buttons">Disable A/B turbo</string>
    <string name="hide_select_start">Hide select/start</string>
    <string name="vkeypad_layout">D-pad + buttons layout</string>
    <string name="layout_margin_x">Layout horizontal margin</string>
    <string name="layout_margin_y">Layout vertical margin</string>
    <string name="enable_trackball">Trackball as D-pad</string>
    <string name="trackball_sensitivity">Trackball sensitivity</string>
    <string name="enable_sensor">Sensor as left/right</string>
    <string name="sensor_sensitivity">Sensor sensitivity</string>
    <string name="netplay_settings">Net-play settings</string>
    <string name="max_frames_ahead">Max frames ahead</string>
    <string name="max_frames_ahead_summary">Values other than 0 may cause serious sync problem!</string>
    <string name="auto_sync_client">Auto sync client</string>
    <string name="auto_sync_client_interval">Auto sync interval</string>
    <string name="other_settings">Other settings</string>
    <string name="cheating">Cheating</string>
    <string name="enable_cheats">Enable cheats</string>
    <string name="enable_game_genie">Enable Game Genie</string>
    <string name="bios">BIOS</string>
    <string name="game_genie_rom">Game Genie</string>
    <string name="fds_rom">Famicom Disk System</string>
    <string name="user_settings">User settings</string>
    <string name="full_screen_mode">Full screen mode</string>
    <string name="full_screen_mode_summary">Hide system notification bar</string>
    <string name="hide_navigation_bar">Hide navigation bar</string>
    <string name="hide_navigation_bar_summary">Hide navigation bar on Android 4.4+</string>
    <string name="occupy_cutout_area">Allow to occupy cutout area</string>
    <string name="occupy_cutout_area_summary">The game screen and virtual keyboard will be extended to the cutout area</string>
    <string name="orientation">Orientation</string>
    <string name="orientation_summary">The game screen orientation</string>
    <string name="quick_load_on_start">Quick load on start</string>
    <string name="quick_load_on_start_summary">Auto load game state on ROM start</string>
    <string name="use_input_method">Use input method</string>
    <string name="use_input_method_summary">Enable special input device (eg. bluetooth gamepad)</string>
    <string name="app_about">About Nesoid</string>
    <string name="license">License</string>
    <string name="legal">Legal</string>
    <string name="press_key_prompt">Press a hardware key...</string>
    <string name="key_none">&lt;none&gt;</string>
    <string name="key_unknown">&lt;unknown (%1$d)&gt;</string>
    <string name="key_clear">Clear</string>
    <string name="gamepad_up">Up</string>
    <string name="gamepad_down">Down</string>
    <string name="gamepad_left">Left</string>
    <string name="gamepad_right">Right</string>
    <string name="gamepad_up_left">Up+Left</string>
    <string name="gamepad_up_right">Up+Right</string>
    <string name="gamepad_down_left">Down+Left</string>
    <string name="gamepad_down_right">Down+Right</string>
    <string name="gamepad_select">Select</string>
    <string name="gamepad_start">Start</string>
    <string name="gamepad_A">Button A</string>
    <string name="gamepad_B">Button B</string>
    <string name="gamepad_A_turbo">Button A (turbo)</string>
    <string name="gamepad_B_turbo">Button B (turbo)</string>
    <string name="gamepad_AB">Button A&amp;B</string>
    <string name="wider_key_response">Wider key response range</string>
    <string name="wider_key_response_summary">Even pressing outside the virtual keyboard image</string>
    <string name="netplay_warning">There is an net-play in progress, please disconnect first.</string>
    <string name="version">Version</string>
</resources>